--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=demo
+
+
+#Configuracíon MongoDB
+spring.data.mongodb.uri=mongodb+srv://EciBienestarUser:root1234@practicalibre.ruku81r.mongodb.net/gestion_turnos_db?retryWrites=true&w=majority&appName=PracticaLibre
+
+#Configuración del servidor
+server.port=8080
+
+#Configuración de DevTools
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
